Add administration Part: user management + metrics + health

--- a/epi/src/main/webapp/scripts/app/account/password/password.html
+++ b/epi/src/main/webapp/scripts/app/account/password/password.html
@@ -1,7 +1,12 @@
-<div>
+			<div class="block full">
+				<div class="block-title">
+					<h2>
+						<span translate="password.title"  translate-values="{username: '{{account.login}}'}">Password for [{{account.login}}]</span>
+					</h2>
+				</div>
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
-            <h2 translate="password.title" translate-values="{username: '{{account.login}}'}">Password for [<b>{{account.login}}</b>]</h2>
+          
 
             <div class="alert alert-success" ng-show="success" translate="password.messages.success">
                 <strong>Password changed!</strong>
@@ -56,7 +61,7 @@
                     </div>
                 </div>
 
-                <button type="submit" ng-disabled="form.$invalid" class="btn btn-primary" translate="password.form.button">Save</button>
+                <button type="submit" ng-disabled="form.$invalid" class="btn btn-sm btn-primary" translate="password.form.button">Save</button>
             </form>
         </div>
     </div>
