--- a/epi/src/main/webapp/scripts/app/error/accessdenied.html
+++ b/epi/src/main/webapp/scripts/app/error/accessdenied.html
@@ -1,13 +1,19 @@
 <div ng-cloak>
-    <div class="row">
-        <div class="col-md-4">
-            <span class="hipster img-responsive img-rounded"></span>
-        </div>
-        <div class="col-md-8">
-            <h1 translate="error.title">Error Page!</h1>
 
-            <div class="alert alert-danger" translate="error.403">You are not authorized to access the page.
-            </div>
-        </div>
-    </div>
+	<div id="error-container">
+		<div class="error-options">
+		
+		</div>
+		<div class="row">
+			<div class="col-sm-8 col-sm-offset-2 text-center">
+				<h1 class="animation-fadeIn">
+					<i class="fa fa-times-circle-o text-muted"></i> <span translate="error.title">Error Page!</span>
+				</h1>
+				<h2 class="h3 text-muted" translate="error.403">You are
+				not authorized to access the page.</h2>
+			</div>
+			
+		</div>
+	</div>
+
 </div>
