--- a/epi/src/main/webapp/scripts/app/account/settings/settings.html
+++ b/epi/src/main/webapp/scripts/app/account/settings/settings.html
@@ -1,7 +1,11 @@
-<div>
+	<div class="block full">
+				<div class="block-title">
+					<h2>
+						<span translate="settings.title" translate-values="{username: '{{settingsAccount.login}}'}">User settings for [{{settingsAccount.login}}]</span>
+					</h2>
+				</div>
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
-            <h2 translate="settings.title" translate-values="{username: '{{settingsAccount.login}}'}">User settings for [<b>{{settingsAccount.login}}</b>]</h2>
 
             <div class="alert alert-success" ng-show="success" translate="settings.messages.success">
                 <strong>Settings saved!</strong>
@@ -78,12 +82,9 @@
                         </p>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label for="langKey" translate="settings.form.language">Language</label>
-                    <select id="langKey" name="langKey" class="form-control" ng-model="settingsAccount.langKey" ng-controller="LanguageController" ng-options="code as (code | findLanguageFromKey) for code in languages"></select>
-                </div>
+                
 
-                <button type="submit" ng-disabled="form.$invalid" class="btn btn-primary" translate="settings.form.button">Save</button>
+                <button type="submit" ng-disabled="form.$invalid" class="btn btn-sm btn-primary" translate="settings.form.button">Save</button>
             </form>
         </div>
     </div>
