--- a/epi/src/main/webapp/scripts/app/admin/health/health.html
+++ b/epi/src/main/webapp/scripts/app/admin/health/health.html
@@ -1,35 +1,56 @@
-<div>
+<div class="block-section clearfix">
+		<div class="form-group form-actions">
+			<div class="col-xs-12 ">
+				<button type="button" class="btn btn-sm btn-primary pull-right"
+					ng-click="refresh()">
+					<span class="glyphicon glyphicon-refresh"></span>&nbsp;<span
+						translate="health.refresh.button">Refresh</span>
+				</button>
+			</div>
+		</div>
+	</div>
 
-    <h2 translate="health.title">Health Checks</h2>
 
-    <p>
-        <button type="button" class="btn btn-primary" ng-click="refresh()"><span class="glyphicon glyphicon-refresh"></span>&nbsp;<span translate="health.refresh.button">Refresh</span>
-        </button>
-    </p>
+<div class="block full">
+	<div class="block-title">
+		<h2>
+			<span> <span translate="health.title">Health Checks</span>
+		</h2>
+	</div>
 
-    <table id="healthCheck" class="table table-striped">
-        <thead>
-            <tr>
-                <th class="col-md-7" translate="health.table.service">Service Name</th>
-                <th class="col-md-2 text-center" translate="health.table.status">Status</th>
-                <th class="col-md-2 text-center" translate="health.details.details">Details</th>
-                
-            </tr>
-        </thead>
-        <tbody>
-            <tr ng-repeat="health in healthData">
-                <td>{{'health.indicator.' + baseName(health.name) | translate}} {{subSystemName(health.name)}}</td>
-                <td class="text-center">
-                    <span class="label" ng-class="getLabelClass(health.status)">
-                        {{'health.status.' + health.status | translate}}
-                    </span>
-                </td>
-                <td class="text-center">
-                    <a class="hand" ng-click="showHealth(health)" ng-show="health.details || health.error">
-                        <i class="glyphicon glyphicon-eye-open"></i>
-                    </a>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+
+	<div class="table-responsive remove-margin-bottom">
+		<table
+			class="table table-striped table-bordered table-vcenter remove-margin-bottom">
+			<thead>
+				<tr>
+					<th class="col-md-7" translate="health.table.service">Service
+						Name</th>
+					<th class="col-md-2 text-center" translate="health.table.status">Status</th>
+					<th class="col-md-2 text-center" translate="health.details.details">Details</th>
+
+				</tr>
+			</thead>
+			<tbody>
+				<tr ng-repeat="health in healthData">
+					<td>{{'health.indicator.' + baseName(health.name) |
+						translate}} {{subSystemName(health.name)}}</td>
+					<td class="text-center"><span class="label"
+						ng-class="getLabelClass(health.status)"> {{'health.status.'
+							+ health.status | translate}} </span></td>
+
+
+					<td class="text-center">
+						<div class="btn-group btn-group-xs">
+							<a class="btn btn-default" href="javascript:void(0)"
+								ng-click="showHealth(health)"
+								ng-show="health.details || health.error"> <i
+								class="glyphicon glyphicon-eye-open"></i>
+							</a>
+						</div>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
 </div>
