--- a/epi/src/main/webapp/scripts/app/admin/user-management/user-management-delete-dialog.html
+++ b/epi/src/main/webapp/scripts/app/admin/user-management/user-management-delete-dialog.html
@@ -9,11 +9,11 @@
         <p translate="user-management.delete.question" translate-values="{login: '{{user.login}}'}">Are you sure you want to delete this User?</p>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="clear()">
+        <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" ng-click="clear()">
             <span class="glyphicon glyphicon-ban-circle"></span>&nbsp;<span translate="entity.action.cancel">Cancel</span>
         </button>
-        <button type="submit" ng-disabled="deleteForm.$invalid" class="btn btn-danger">
-            <span class="glyphicon glyphicon-remove-circle"></span>&nbsp;<span translate="entity.action.delete">Delete</span>
+        <button type="submit" ng-disabled="deleteForm.$invalid" class="btn btn-sm btn-danger">
+            <span class="glyphicon glyphicon-trash"></span>&nbsp;<span translate="entity.action.delete">Delete</span>
         </button>
     </div>
 </form>
