--- a/epi/src/main/webapp/scripts/app/navigation/navigation-search.html
+++ b/epi/src/main/webapp/scripts/app/navigation/navigation-search.html
@@ -56,7 +56,7 @@
 		<div class="row"></div>
 
 		<div class="form-actions text-right ">
-			<button type="submit" class="btn btn-primary">
+			<button type="submit" class="btn btn-sm btn-primary">
 				<i class="fa fa-search icon"></i><span
 					translate="entity.action.search">Chercher</span>
 			</button>
@@ -113,7 +113,7 @@
 				</tbody>
 			</table>
 		</div>
-		<div class="block-section text-right">
+		<div class="block-section text-left">
 			<uib-pagination class="pagination  remove-margin"
 				total-items="NavigationSearchController.totalItems"
 				ng-model="NavigationSearchController.pageable.page"
