--- a/epi/src/main/webapp/scripts/app/exercise/exercise-edit.html
+++ b/epi/src/main/webapp/scripts/app/exercise/exercise-edit.html
@@ -182,7 +182,7 @@
 		</table>
 
 		<h2 class="text-center" ng-show="displayedfiles.length === 0">Aucun
-			fichier n'a Ã©tÃ© chargÃ©
+			fichier n'a été chargé
 			</h2>
 
 	</div>
