--- a/epi/src/main/webapp/scripts/app/exercise/exercise-edit.html
+++ b/epi/src/main/webapp/scripts/app/exercise/exercise-edit.html
@@ -123,6 +123,67 @@
 		</div>
 	</div>
 	</uib-accordion-group> </uib-accordion>
+	
+		</uib-accordion-group></uib-accordion>
+	<uib-accordion> <uib-accordion-group
+		ng-init="isOpen = true" is-open="isOpen"
+		heading="{{'exercise.medias' | translate}}">
+	<div class="panel-body">
+
+	<div class="form-group">
+			<label for="compose-message" class="col-md-3 col-lg-2 control-label"
+				translate="exercise.newlink">new Link</label>
+			<div class="col-md-9 col-lg-10">
+				<input ng-model="ExerciseController.newMediaLink"
+					placeholder="{{ 'exercise.medialink.placeholder' | translate}}"
+					class="form-control" name="compose-message" id="compose-message" />
+				<button class="btn btn-sm btn-primary "
+						ng-click="ExerciseController.addMediaLink();">
+						<i class="fa fa-plus"></i> <span
+							translate="entity.action.addlink">Add Link</span>
+					</button>
+			</div>
+		</div>
+
+
+
+		<table ng-show="ExerciseController.exercise.uploadedFiles.length > 0"
+			class="table table-striped table-bordered table-vcenter remove-margin-bottom">
+			<thead>
+				<tr>
+					<th class="text-center"><span translate="exercise.file.name">Name</span>
+					</th>
+					<th class="text-center"><span
+						translate="exercise.file.creationDate">Creation Date</span></th>
+					<th class="text-center"></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr ng-show="ExerciseController.exercise.medias.length"
+					ng-repeat="media in ExerciseController.exercise.medias ">
+					<td class="text-center">{{media.mediaURL}}</td>
+					<td class="text-center">
+						<div class="btn-group btn-group-xs">
+							<a class="btn btn-default" href="javascript:void(0)"
+								uib-tooltip="{{'entity.action.download' | translate}}"><i
+								class="fa fa-download"
+								ng-click="ExerciseController.downloadFile(file.id)"></i></a>
+						</div>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+
+		<h2 class="text-center" ng-show="displayedfiles.length === 0">Aucun
+			lien Youtube n'a été chargé
+			</h2>
+
+	</div>
+
+	</uib-accordion-group> </uib-accordion>
+	
+	
+	
 	<uib-accordion> <uib-accordion-group
 		ng-init="isOpen = true" is-open="isOpen"
 		heading="{{'entity.action.addcontent' | translate}}">
