--- a/epi/src/main/webapp/scripts/app/exercise/exercise-edit.html
+++ b/epi/src/main/webapp/scripts/app/exercise/exercise-edit.html
@@ -133,41 +133,41 @@
 	<div class="form-group">
 			<label for="compose-message" class="col-md-3 col-lg-2 control-label"
 				translate="exercise.newlink">new Link</label>
-			<div class="col-md-9 col-lg-10">
+			<span class="col-md-9 col-lg-8">
 				<input ng-model="ExerciseController.newMediaLink"
 					placeholder="{{ 'exercise.medialink.placeholder' | translate}}"
 					class="form-control" name="compose-message" id="compose-message" />
-				<button class="btn btn-sm btn-primary "
+				
+			</span>
+			<button class="btn btn-sm btn-primary col-md-3 col-lg-2"
 						ng-click="ExerciseController.addMediaLink();">
 						<i class="fa fa-plus"></i> <span
 							translate="entity.action.addlink">Add Link</span>
 					</button>
-			</div>
 		</div>
 
 
 
-		<table ng-show="ExerciseController.exercise.uploadedFiles.length > 0"
+		<table ng-show="ExerciseController.exercise.mediaUrls.length > 0"
 			class="table table-striped table-bordered table-vcenter remove-margin-bottom">
 			<thead>
 				<tr>
-					<th class="text-center"><span translate="exercise.file.name">Name</span>
+					<th class="text-center"><span translate="exercise.medialink">Name</span>
 					</th>
-					<th class="text-center"><span
-						translate="exercise.file.creationDate">Creation Date</span></th>
+					
 					<th class="text-center"></th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr ng-show="ExerciseController.exercise.medias.length"
-					ng-repeat="media in ExerciseController.exercise.medias ">
-					<td class="text-center">{{media.mediaURL}}</td>
+				<tr ng-show="ExerciseController.exercise.mediaUrls.length > 0"
+					ng-repeat="media in ExerciseController.exercise.mediaUrls ">
+					<td class="text-center">{{media}}</td>
 					<td class="text-center">
 						<div class="btn-group btn-group-xs">
 							<a class="btn btn-default" href="javascript:void(0)"
-								uib-tooltip="{{'entity.action.download' | translate}}"><i
-								class="fa fa-download"
-								ng-click="ExerciseController.downloadFile(file.id)"></i></a>
+								uib-tooltip="{{'entity.action.delete' | translate}}"><i
+								class="fa fa-minus"
+								ng-click="ExerciseController.removeMediaLink(media);"></i></a>
 						</div>
 					</td>
 				</tr>
@@ -206,7 +206,7 @@
 					<button class="btn btn-sm btn-primary "
 						ngf-select="ExerciseController.uploadFile($file)">
 						<i class="fa fa-upload "></i> <span
-							translate="entity.action.upload">Upload></span>
+							translate="entity.action.upload">Upload</span>
 					</button>
 				</div>
 			</div>
@@ -242,9 +242,9 @@
 			</tbody>
 		</table>
 
-		<h2 class="text-center" ng-show="displayedfiles.length === 0">Aucun
-			fichier n'a été chargé
-			</h2>
+		<h3 class="text-center" ng-show="displayedfiles.length === 0" 
+						translate="exercise.file.noFileUploaded">
+			</h3>
 
 	</div>
 
