--- a/epi/src/main/webapp/scripts/app/app.tpl.html
+++ b/epi/src/main/webapp/scripts/app/app.tpl.html
@@ -4,7 +4,7 @@
 
 		<div ui-view="sidebar" ng-cloak=""></div>
 		<div id="main-container">
-			<div ui-view="navbar" ng-cloak=""></div>
+			<!-- <div ui-view="navbar" ng-cloak=""></div> -->
 
 			<div id="page-content" style="min-height: 900px">
 				<div ng-cloak>
@@ -14,7 +14,7 @@
 			<footer class="clearfix">
 				<div class="pull-right">
 					<i class="fa fa-book text-danger"></i> <a
-						href="javascript:void(0);" target="_blank">BNDEPI-ERLM</a>
+						href="http://www.erlm.tn/" target="http://www.erlm.tn/">BNDEPI-ERLM</a>
 				</div>
 			</footer>
 		</div>
