--- a/epi/src/main/webapp/scripts/app/exercise/exercise-preview.html
+++ b/epi/src/main/webapp/scripts/app/exercise/exercise-preview.html
@@ -107,6 +107,10 @@
 							</tr>
 						</tbody>
 					</table>
+				
+					<h3 class="text-center" ng-show="ExerciseController.exercise.uploadedFiles.length === 0" translate="exercise.file.noFileUploaded">
+					</h3>
+
 				</div>
 			</div>
 		</div>
