--- a/epi/src/main/webapp/scripts/app/exercise/exercise-edit.html
+++ b/epi/src/main/webapp/scripts/app/exercise/exercise-edit.html
@@ -12,7 +12,7 @@
 				<button class="btn btn-sm btn-primary" type="submit">
 					<i class="fa fa-save"></i> <span translate="entity.action.save">Save</span>
 				</button>
-				<button class="btn btn-sm btn-default " type="button" ui-sref="home">
+				<button class="btn btn-sm btn-default " type="button" ui-sref="exercise-details({id:ExerciseController.exercise.id})">
 					<i class="fa fa-times"></i> <span translate="entity.action.cancel">cancel</span>
 				</button>
 				<button ng-click="ExerciseController.remove()"
