--- a/epi/src/main/webapp/scripts/app/main/main.html
+++ b/epi/src/main/webapp/scripts/app/main/main.html
@@ -103,7 +103,7 @@
 									<td class="text-center">{{exercise.subject}}</td>
 									<td class="text-center">{{exercise.group.nameWithLevel}}</td>
 
-									<td class="text-center"><span>{{ExerciseDetailsController.exercise.validatedAt
+									<td class="text-center"><span>{{exercise.validatedAt
 											| getDate |date:'dd/MM/yyyy'}}</span></td>
 									<td class="text-center">
 										<div class="btn-group btn-group-xs">
