--- a/epi/src/main/webapp/index.html
+++ b/epi/src/main/webapp/index.html
@@ -167,7 +167,7 @@
 	<script src="scripts/components/texteditor/texteditor.config.js"></script>
 	<script src="scripts/components/router-animate/ui-router-animate.directive.js"></script>
 	<script src="scripts/components/school/discipline-service.js"</script>
-	<script src="scripts/components/school/topic-service.js"</script>
+	<!-- <script src="scripts/components/school/topic-service.js"</script> -->
 	<script src="scripts/app/navigation/navigation.service.js"></script>
 	<script src="scripts/app/navigation/navigation.controller.js"</script>
 	<script src="scripts/app/admin/school-year/school-year.js"</script>
