add intro.js on create EPI page

--- a/epi/src/main/webapp/index.html
+++ b/epi/src/main/webapp/index.html
@@ -172,6 +172,12 @@
 	<script src="scripts/app/navigation/navigation.controller.js"</script>
 	<script src="scripts/app/admin/school-year/school-year.js"</script>
 	
+	
+	
+	<script src="bower_components/intro.js/minified/intro.min.js"></script>
+	<script src="bower_components/angular-intro.js/src/angular-intro.js"></script>
+	   <!-- Add IntroJs styles -->
+	    <link href="bower_components/intro.js/introjs.css" rel="stylesheet">
 	<!-- endbuild -->
 </body>
 </html>
