Add Topic manegement part

--- a/epi/src/main/webapp/index.html
+++ b/epi/src/main/webapp/index.html
@@ -167,13 +167,12 @@
 	<script src="scripts/components/texteditor/texteditor.config.js"></script>
 	<script src="scripts/components/router-animate/ui-router-animate.directive.js"></script>
 	<script src="scripts/components/school/discipline-service.js"</script>
-	<!-- <script src="scripts/components/school/topic-service.js"</script> -->
 	<script src="scripts/app/navigation/navigation.service.js"></script>
 	<script src="scripts/app/navigation/navigation.controller.js"</script>
 	<script src="scripts/app/admin/school-year/school-year.js"</script>
+	<script src="scripts/app/admin/topic/topic.js"</script>
 	
-	
-	
+	<!-- <script src="scripts/components/school/topic-service.js"</script> -->
 	<script src="bower_components/intro.js/minified/intro.min.js"></script>
 	<script src="bower_components/angular-intro.js/src/angular-intro.js"></script>
 	   <!-- Add IntroJs styles -->
