--- a/epi/src/main/webapp/scripts/app/admin/user-management/user-management.html
+++ b/epi/src/main/webapp/scripts/app/admin/user-management/user-management.html
@@ -28,7 +28,7 @@
 				<div class="col-md-3 col-sm-6">
 					<div class="form-group">
 						<label for="inputWebsite" class="control-label" 
-						translate="user-management.firstName"> Nom</label>
+						translate="user-management.lastName"> Nom</label>
 						<div class="input-icon right">
 							<input id="inputLastName" type="text"
 								ng-model="userSearchModel.lastName" class="form-control">
@@ -39,7 +39,7 @@
 				<div class="col-md-3 col-sm-6">
 					<div class="form-group">
 						<label for="inputFirstName" class="control-label"
-						translate="user-management.lastName">Prenom</label>
+						translate="user-management.firstName">Prenom</label>
 						<div class="input-icon right">
 							<input id="inputWebsite" type="text"
 								ng-model="userSearchModel.firstName" class="form-control">
