ajuster le button IntroJS

--- a/epi/src/main/webapp/index.html
+++ b/epi/src/main/webapp/index.html
@@ -170,7 +170,7 @@
 	<script src="scripts/app/navigation/navigation.service.js"></script>
 	<script src="scripts/app/navigation/navigation.controller.js"</script>
 	<script src="scripts/app/admin/school-year/school-year.js"</script>
-	<script src="scripts/app/admin/topic/topic.js"</script>
+	<script src="scripts/app/admin/topic/topic.js"></script>
 	
 	<!-- <script src="scripts/components/school/topic-service.js"</script> -->
 	<script src="bower_components/intro.js/minified/intro.min.js"></script>
