--- a/epi/src/main/webapp/scripts/app/exercise/app.tpl.exercise.html
+++ b/epi/src/main/webapp/scripts/app/exercise/app.tpl.exercise.html
@@ -4,7 +4,7 @@
 	<li ui-sref="home">Accueil</li>
 	<li class="active"><a ui-sref="exercise-new" translate="exercise.create.title"> Ajouter EPI </a></li>
 	
-	<button ng-click="CallMe();">Go</button>
+	<button ng-click="CallMe();" class="btn btn-sm" style="position: absolute; right: 0px; top: 0px; height: 30px; width: 30px;"><i class="fa fa-question-circle"></i></button>
 </ul>
 
 <div class="block">
